# bazel-kotlin

./: README.md  WORKSPACE.bazel
java/server/: BUILD.bazel  Server.kt
java/server/grpc_parser/: BUILD.bazel  Parser.kt
java_tests/service/: BUILD.bazel
