load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary")

kt_jvm_binary(
    name = "server",
    srcs = [
        "Server.kt",
    ],
    main_class = "server.ServerKt",
    visibility = ["//visibility:public"],
    deps = [
        "//java/server/grpc_parser",
        "//third_party/dagger",
        "@maven//:com_github_ajalt_clikt",
    ],
)